--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
       </nav>
     </header>
 
+                      <!--Main_content-->
+    <div class="main.container">
+      <div class="column.large">
+        
+      </div>
+      <div class="column.medium">
 
+      </div>
+      <div class="column.small">
+
+      </div>
+    </div>
 
 
   </body>
